--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "flask-jwt-extended (>=4.7.1,<5.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "black (>=25.1.0,<26.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
 ]
 
 [tool.poetry]
